<resources>
    <string name="app_name">My Recipe Book</string>

    <string name="search">Search</string>
    <string name="selection">Selection</string>
    <string name="comments">Comments</string>
    <string name="all">All</string>
    <string name="snack">Snack</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="fav">Fav</string>

    <string-array name="Selection">
        <item>Ingredients</item>
        <item>Instruction</item>
        <item>Comments</item>
    </string-array>


</resources>