<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_All"
        android:enabled="true"
        android:title="@string/all"
        android:icon="@drawable/ic_all"/>
    <item
        android:id="@+id/item_Snack"
        android:enabled="true"
        android:title="@string/snack"
        android:icon="@drawable/ic_dessert"/>
    <item
        android:id="@+id/item_Lunch"
        android:enabled="true"
        android:title="@string/lunch"
        android:icon="@drawable/ic_lunch"/>
    <item
        android:id="@+id/item_Dinner"
        android:enabled="true"
        android:title="@string/dinner"
        android:icon="@drawable/ic_dinner"/>
    <item
        android:id="@+id/item_Favorite"
        android:enabled="true"
        android:title="@string/fav"
        android:icon="@drawable/ic_fav"/>





</menu>